--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
 			<div id="scoreboard" class="section">
 				<ol>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
-					<li class="tries"><img src="images/liveHeart.png" alt="Heart Icon" height="35" width="30"></li>
+					<li class="tries"><img src="images/grim-reaper.png" alt="Life Icon" height="100" width="220"></li>
+					<li class="tries"><img src="images/grim-reaper.png" alt="Life Icon" height="100" width="220"></li>
+					<li class="tries"><img src="images/grim-reaper.png" alt="Life Icon" height="100" width="220"></li>
+					<li class="tries"><img src="images/grim-reaper.png" alt="Life Icon" height="100" width="220"></li>
+					<li class="tries"><img src="images/grim-reaper.png" alt="Life Icon" height="100" width="220"></li>
 				</ol>
 			</div>
 		</div>
